Eevee noise texture bug when there are 4 or more other noise textures being used in the bump node #69776
Labels
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
8 Participants
Notifications
Due Date
No due date set.
Dependencies
No dependencies set.
Reference: blender/blender#69776
Loading…
Reference in New Issue
Block a user
No description provided.
Delete Branch "%!s()"
Deleting a branch is permanent. Although the deleted branch may continue to exist for a short time before it actually gets removed, it CANNOT be undone in most cases. Continue?
System Information
Operating system: Windows-10-10.0.18362 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.86
Blender Version
Broken: version: 2.81 (sub 10), branch: master, commit date: 2019-09-11 21:31, hash:
1e375ab5a1
Worked: (optional)
Short description of error
This bug only happens in Blender 2.81
When there are 4 or more noise textures being used to produce the bump and put that in a bump node, the noise texture used in the color socket will be broken if rendered with Eevee
Other textures don't seem to be affected.
Exact steps for others to reproduce the error
Open this file and render with Eevee
bug.blend
#72737 was marked as duplicate of this issue
#72665 was marked as duplicate of this issue
blender/blender-addons#72427 was marked as duplicate of this issue
Added subscriber: @ssendam
Added subscribers: @OmarEmaraDev, @JacquesLucke
I can reproduce the issue. It works fine in cycles.
Something seems to be fine when there are more noise nodes for whatever reason.
@OmarEmaraDev any idea?
eevee left, cycles right:
It is not immediately clear to me why this is happening. I will try to debug that now.
It appears
ffd5e1e6ac
is the commit that introduced this behavior. Perhaps due to the instruction limit described in the commit message.Added subscriber: @mano-wii
Apparently this has been fixed in the latest builds.
I can't reproduce the problem.
Can anyone else confirm?
I can still replicate the issue.
This is what is displayed to me:
I suppose it's a Nvidia issue.
Operating system: Windows-10-10.0.18941 64 Bits
Graphics card: Radeon (TM) RX 480 Graphics ATI Technologies Inc. 4.5.13559 Core Profile Context 26.20.12028.2
I am on Linux with an RX 590 running the mesa driver stack. So it is not an nvidea only issue.
With 2D noise, there must be at least 7 noise nodes in the bump and at least 1 more anywhere, with 3D noise, there must be at least 4 in the bump and at least one more anywhere, With 4D noise, 3 noise nodes in the bump is enough, no need for another one else where.
When it happens, all the noises are glitched.
This only happens in 2.81, in 2.8 everything is fine
Added subscriber: @ichbinkeinreh
Added subscriber: @Vigore
Added subscriber: @Eary
Added subscriber: @Bloodfin
Added subscriber: @fclem
Changed status from 'Confirmed' to: 'Archived'
I would say we bump into some register limit and the compiler instead of giving an error, does something incorrectly.
Unfortunately, we have no control over the GLSL compiler, and the bug is more likelly to happen because of the new high-quality bump.
There is no workaround to that other than baking the noises or using textures as noise to limit register pressure.
I'll close the report as this is beyond what we can do. We already added some improvement to the noise to limit register usage but that's all we can do. There will always be a physical limit (well not really but the driver should react more correctly to it).
This issue was referenced by
b4f8e3f01b
Changed status from 'Archived' to: 'Resolved'