Fix T69776: Error with complex Eevee noise texture in some drivers

Apparently the compiled shader bump into some register limit and
the compiler instead of giving an error, does something incorrectly.

Differential Revision: https://developer.blender.org/D6759